# millipede-caster

./: .gitignore  CMakeLists.txt  Dockerfile  LICENCE  README.md  install.sh  uninstall.sh  update.sh
.github/workflows/: build.yaml  ci.yml  release.yaml
caster/: Dockerfile  Makefile  adm.c  adm.h  api.c  api.h  auth.c  auth.h  bitfield.c  bitfield.h  caster.c  caster.h  conf.c  conf.h  config.c  config.h  endpoints.c  endpoints.h  fetcher_sourcetable.c  fetcher_sourcetable.h  file.c  file.h  gelf.c  gelf.h  graylog_sender.c  graylog_sender.h  hash.c  hash.h  http.c  http.h  ip.c  ip.h  jobs.c  jobs.h  json.c  json.h  livesource.c  livesource.h  log.c  log.h  (+44 more)
deploy/: millipede-caster.service
docs/: HARDWARE.md  RINEX_ROADMAP.md
sample-config/: blocklist  caster.sh  caster.yaml  host.auth  source.auth  sourcetable-filter.json
tests/: t1.py  t2.py  t3.py  test-access_log.py  test-api-race.py  test-chunks.py  test-chunks2.py  test-fetched.py  test-fetcher-reload-race.py  test-graylog-reload.py  test-headers.py  test-keepalive.py  test-livesource-race.py  test-livesource-race2.py  test-logs-stream.py  test-logs-ws.py  test-metrics.py  test-near1.py  test-near2.py  test-near3.py  test-quota.py  test-rinex.py  test-rtcm-freq.py  test-rtcm-ringbuffer.py  test-rtcm.py  test-rtcm2.py  test-send-expect.py  test-send-expect2.py  test-source-json.py  test-syncer-client-timeout.py  test-syncer-timeout.py  test-timeout.py  test-token-auth.py  test_msm7_multi.c  test_real_ntrip.c  testlib.py
tests/testconfig/: blocklist  blocklist1  blocklist2  caster.yaml  caster2.yaml  caster_badconfig1.yaml  caster_badconfig2.yaml  caster_multifilter.yaml  host.auth  source-wildcard.auth  source.auth  test_file_parse_10_2.txt  test_file_parse_10_2_err.txt  test_file_parse_10_2_err2.txt
tests/testconfig/webroot/example-well-known/: test.txt
tools/: configure_receiver.sh  detect_receiver.sh
tools/grafana/: README.md  millipede-caster-dashboard.json
web/admin/: app.js  index.html  style.css
